# itw-cli

./: .gitignore  LICENSE  README.md  itw.py  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
itwlib/: __init__.py  api.py  card.py  cli.py  commands.py  config.py  generate.py  render.py  update.py
tests/: test_commands.py  test_generate.py  test_logic.py  test_render_path.py  test_update.py
