[project]
name = "itw-cli"
version = "0.3.1"
description = "A polished open-source terminal client for intheweights.com — leaderboard, per-model recognition, and a terminal share card with the hosted pixel avatar embedded."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Matt Silverman" }]
keywords = ["intheweights", "cli", "terminal", "llm", "pixel-art", "rich", "leaderboard"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13",
    "pillow>=10",
    "rich-pixels>=3",
]

[project.urls]
Homepage = "https://intheweights.com"
Repository = "https://github.com/mattsilv/itw-cli"

[project.scripts]
itw = "itwlib.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["itwlib"]
artifacts = ["itwlib/avatars/*.png"]  # force-include despite the *.png gitignore
